--- a/manifest.json
+++ b/manifest.json
@@ -39,6 +39,10 @@
         }
     },
     "permissions": ["activeTab"],
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+    "web_accessible_resources": [
+      "dist/content.js"
+    ]
+    
   }
   
