--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nlpjs/nlp": "^4.26.1",
     "browserify-fs": "^1.0.0",
     "finnlp": "^1.1.1",
+    "lemmatizer": "^0.0.1",
     "natural": "^6.3.0",
     "node-nlp": "^4.26.1",
     "puppeteer": "^19.11.1",
